--- a/index.html
+++ b/index.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Origami Designs</title>
-            <style>
-                *{background-color: lightblue}
-                .camel{border-style:solid}
-                .pigeon{border-style: solid}
-                .panda{border-style: solid}
-                .chameleon{border-style: solid}
-                .cicada{border-style: solid}
-                .teddy{border-style: solid}
-            </style>
+            <link rel="stylesheet" href= "style.css">
         </head>
         <body>
-            <a href="aboutus.html" target = "_blank">About Us</a>
-            <a href="followus.html" target = "_blank">Follow Us</a>
-                <br>
-                <br>
-                <br>
-                <br>
-            <hr width=1000px>
-                <br>
-                <br>
-                <br>
-            <div class = camel>
-                <a href = "http://origami.me/camel/" target = "_blank"><img src ="camel.png" width = 150 height=150></a>
-                <p><I>Some interesting facts about camels:</I></p>
-                    <ul><li>They store excess food and water in the hump on their back.</li>
-                    <li>They can live up to months without food or water.</li>
-                    <li>Camels in cold deserts grow fur to keep warm.</li></ul>
+            <div class = "header">
+                <div class = "menu">
+                         <div><a href="followus.html" target = "_blank">Follow Us</a></div>
+                         <div>Origami Designs</div>
+                        <div><a href="aboutus.html" target = "_blank">About Us</a></div>
+                </div>
             </div>
-        <br>
-        <br>
-            <div class = pigeon>
-                <a href = "http://origami.me/pigeon/" target = "_blank"><img src ="pigeon.png" width = 150 height=150></a>
-                <p><I>Some interesting facts about pigeons:</I></p>
-                    <ul>
-                        <li>Pigeons are very social and intelligent.</li>
-                        <li>They have good navigation abilities.</li>
-                        <li>They have very good auditory abilities.</li>
-                    </ul>
+            <div class = "bodyimg">
+            <img src = "idk.jpg" height = "600px" width="100%">
+                <div class = "more">
+                    <div class = "head"> <h1> Introduction</h1></div>
+                        <div class = "intro"><h3><br>
+                             Origami is a Japanese method of folding paper to form depictions of various animals, objects and other items we see in our day-to-day life.
+                            </h3>
+                        </div>
+                </div>
             </div>
-        <br>
-            <div class = panda>
-                <a href = "http://origami.me/panda/" target = "_blank"><img src ="panda.png" width = 150 height=150></a>
-                <p><I>Some interesting facts about pandas:</I></p>
-                    <ul><li>There are only a few hundred pandas left in the wild.</li>
-                    <li>Pandas are a species of bear.</li>
-                    <li>They can sleep upto 10 hours a day.</li></ul>
-            </div>
-        <br>
-            <div class = chameleon>
-                <a href = "http://origami.me/chameleon/" target = "_blank"><img src ="chameleon.png" width = 150 height=150></a>
-                <p><I>Some interesting facts about chameleons:</I></p>
-                    <ul><li>They can blend within their sorroundings.</li>
-                    <li>They are a species of lizards.</li>
-                    <li>They are especially abundunt in the Amazon rainforest.</li></ul>
-            </div>
-        <br>
-            <div class = cicada>
-                <a href = "http://origami.me/cicada/" target = "_blank"><img src="cicada.png" width = 150 height = 150></a></a>
-                <p><I>Some interesting facts about cicadas:</I></p>
-                    <ul><li>They are only awake at night.</li>
-                    <li>Some stay underground and come to the surface only every 13-17 years.</li>
-                    <li>They are eaten as cuisine in some countries.</li></ul>
-            </div>
-        <br>
-            <div class = teddy>
-                <a href = "http://origami.me/teddy-bear/" target = "_blank"><img src="teddy.png" width = 150 height = 150></a></a>
-                <p><I>Some interesting facts about teddy bears:</I></p>
-                    <ul><li>They are not real animals.</li>
-                    <li>The first recorded teddy bear in history was made in 1568.</li>
-                    <li>Teddy bears were originally expensive toys only affordable to royalty.</li></ul>
+                <br>
+                <br>
+                <br>
+            <div class = grid>
+                <div class = origami>
+                    <a href = "http://origami.me/camel/" target = "_blank"><img src ="camel.png" width = 150 height=150></a>
+                    <p><I>Some interesting facts about camels:</I></p>
+                        <ul><li>They store excess food and water in the hump on their back.</li>
+                        <li>They can live up to months without food or water.</li>
+                        <li>Camels in cold deserts grow fur to keep warm.</li></ul>
+                </div>
+            <br>
+            <br>
+                <div class = origami>
+                    <a href = "http://origami.me/pigeon/" target = "_blank"><img src ="pigeon.png" width = 150 height=150></a>
+                    <p><I>Some interesting facts about pigeons:</I></p>
+                        <ul>
+                            <li>Pigeons are very social and intelligent.</li>
+                            <li>They have good navigation abilities.</li>
+                            <li>They have very good auditory abilities.</li>
+                        </ul>
+                </div>
+            <br>
+                <div class = origami>
+                    <a href = "http://origami.me/panda/" target = "_blank"><img src ="panda.png" width = 150 height=150></a>
+                    <p><I>Some interesting facts about pandas:</I></p>
+                        <ul><li>There are only a few hundred pandas left in the wild.</li>
+                        <li>Pandas are a species of bear.</li>
+                        <li>They can sleep upto 10 hours a day.</li></ul>
+                </div>
+            <br>
+                <div class = origami>
+                    <a href = "http://origami.me/chameleon/" target = "_blank"><img src ="chameleon.png" width = 150 height=150></a>
+                    <p><I>Some interesting facts about chameleons:</I></p>
+                        <ul><li>They can blend within their surroundings.</li>
+                        <li>They are a species of lizards.</li>
+                        <li>They are especially abundunt in the Amazon rainforest.</li></ul>
+                </div>
+            <br>
+                <div class = origami>
+                    <a href = "http://origami.me/cicada/" target = "_blank"><img src="cicada.png" width = 150 height = 150></a></a>
+                    <p><I>Some interesting facts about cicadas:</I></p>
+                        <ul><li>They are only awake at night.</li>
+                        <li>Some stay underground and come to the surface only every 13-17 years.</li>
+                        <li>They are eaten as cuisine in some countries.</li></ul>
+                </div>
+            <br>
+                <div class = origami>
+                    <a href = "http://origami.me/teddy-bear/" target = "_blank"><img src="teddy.png" width = 150 height = 150></a></a>
+                    <p><I>Some interesting facts about teddy bears:</I></p>
+                        <ul><li>They are not real animals.</li>
+                        <li>The first recorded teddy bear in history was made in 1568.</li>
+                        <li>Teddy bears were originally expensive toys only affordable to royalty.</li></ul>
+                </div>
             </div>
         </body>
     </html>
